Fixed bugs from schema update -- gap certified status works + farm info shows correctly

--- a/src/styles/FarmProfile.css
+++ b/src/styles/FarmProfile.css
@@ -5,6 +5,7 @@
   padding: 50px;
   background-color: white;
   max-width: 1680px;
+  width: 100%;
 }
 
 .farm-profile__section {
